--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <button class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 px-8 rounded-lg transition-all transform hover:scale-105">
             Join Guild
-          </button>
-          <button class="frosted-glass border border-white/30 hover:bg-white/10 text-white font-bold py-3 px-8 rounded-lg transition-all">
-            View Leaderboard
-          </button>
+          <a href="leaderboards.html" 
+   class="frosted-glass border border-white/30 hover:bg-white/10 text-white font-bold py-3 px-8 rounded-lg transition-all inline-block">
+          View Leaderboard
+          </a>
         </div>
       </div>
     </div>
