--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <div id="vanta-globe" class="absolute inset-0"></div>
     <div class="container mx-auto px-6 relative z-10">
       <div class="max-w-3xl mx-auto text-center">
-        <h2 class="text-5xl md:text-6xl font-bold mb-6 medieval-font">Forge Your Legacy</h2>
+        <h2 class="text-5xl md:text-6xl font-bold mb-6 medieval-font">CELESTIALS</h2>
         <p class="text-xl mb-8 text-gray-200">Track your guild's Combat Power progression and dominate the rankings!</p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <button class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 px-8 rounded-lg transition-all transform hover:scale-105">
-            Join Guild
+           
           <a href="leaderboards.html" 
    class="frosted-glass border border-white/30 hover:bg-white/10 text-white font-bold py-3 px-8 rounded-lg transition-all inline-block">
           View Leaderboard
